--- a/NatMeK_ProySBC/NatMeK_ProySBC/NatMeK_ProySBC.vbproj
+++ b/NatMeK_ProySBC/NatMeK_ProySBC/NatMeK_ProySBC.vbproj
@@ -47,6 +47,9 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SwiPlCs">
+      <HintPath>..\..\..\..\..\..\..\Windows\SwiPlCs.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -147,6 +150,7 @@
     <Compile Include="r2_aloevera.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="visual_connection_prolog.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
